@@ -73,6 +73,9 @@ function filter_theme() {
     'filter_guidelines' => array(
       'variables' => array('format' => NULL),
     ),
+    'filter_html_image_secure_image' => array(
+      'variables' => array('image' => NULL),
+    ),
   );
 }
 
@@ -1246,6 +1249,14 @@ function filter_filter_info() {
     ),
     'tips callback' => '_filter_url_tips',
   );
+  $filters['filter_html_image_secure'] = array(
+    'title' => t('Restrict images to this site'),
+    'description' => t('Disallows usage of &lt;img&gt; tag sources that are not hosted on this site by replacing them with a placeholder image.'),
+    'process callback' => '_filter_html_image_secure_process',
+    'tips callback' => '_filter_html_image_secure_tips',
+    // Supposed to run after other filters and before HTML corrector by default.
+    'weight' => 9,
+  );
   $filters['filter_htmlcorrector'] = array(
     'title' =>  t('Correct faulty and chopped off HTML'),
     'process callback' => '_filter_htmlcorrector',
@@ -1763,6 +1774,78 @@ function _filter_html_escape($text) {
  */
 function _filter_html_escape_tips($filter, $format, $long = FALSE) {
   return t('No HTML tags allowed.');
+}
+
+/**
+ * Process callback for local image filter.
+ */
+function _filter_html_image_secure_process($text) {
+  // Find the path (e.g. '/') to Drupal root.
+  $base_path = base_path();
+  $base_path_length = drupal_strlen($base_path);
+
+  // Find the directory on the server where index.php resides.
+  $local_dir = DRUPAL_ROOT . '/';
+
+  $html_dom = filter_dom_load($text);
+  $images = $html_dom->getElementsByTagName('img');
+  foreach ($images as $image) {
+    $src = $image->getAttribute('src');
+    // Remove absolute URLs pointing to the local domain to prevent mixed
+    // content errors.
+    $image->setAttribute('src', preg_replace('|^https?://' . $_SERVER['HTTP_HOST'] . '|', '', $src));
+
+    // Verify that $src starts with $base_path.
+    // This also ensures that external images cannot be referenced.
+    $src = $image->getAttribute('src');
+    if (drupal_substr($src, 0, $base_path_length) === $base_path) {
+      // Remove the $base_path to get the path relative to the Drupal root.
+      // Ensure the path refers to an actual image by prefixing the image source
+      // with the Drupal root and running getimagesize() on it.
+      $local_image_path = $local_dir . drupal_substr($src, $base_path_length);
+      if (@getimagesize($local_image_path)) {
+        // The image has the right path. Erroneous images are dealt with below.
+        continue;
+      }
+    }
+    // Replace an invalid image with an error indicator.
+    theme('filter_html_image_secure_image', array('image' => $image));
+  }
+  $text = filter_dom_serialize($html_dom);
+  return $text;
+}
+
+/**
+ * Formats an image DOM element that has an invalid source.
+ *
+ * @param DOMElement $image
+ *   An IMG node to format, parsed from the filtered text.
+ *
+ * @return void
+ *   Unlike other theme functions, the passed in $image is altered by reference.
+ *
+ * @see _filter_html_image_secure_process()
+ * @ingroup themeable
+ */
+function theme_filter_html_image_secure_image(&$variables) {
+  $image = $variables['image'];
+
+  // Turn an invalid image into an error indicator.
+  $image->setAttribute('src', base_path() . 'core/misc/message-16-error.png');
+  $image->setAttribute('alt', t('Image removed.'));
+  $image->setAttribute('title', t('This image has been removed. For security reasons, only images from the local domain are allowed.'));
+
+  // Add a CSS class to aid in styling.
+  $class = ($image->getAttribute('class') ? trim($image->getAttribute('class')) . ' ' : '');
+  $class .= 'filter-image-invalid';
+  $image->setAttribute('class', $class);
+}
+
+/**
+ * Filter tips callback for secure HTML image filter.
+ */
+function _filter_html_image_secure_tips($filter, $format, $long = FALSE) {
+  return t('Only images hosted on this site may be used in &lt;img&gt; tags.');
 }
 
 /**
